# regbus

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
cmake/: regbusConfig.cmake.in
examples/: minimal_registry.cpp
include/regbus/: CmdReg.hpp  DBReg.hpp  Registry.hpp  version.hpp
tests/: test_cmdreg.cpp  test_dbreg.cpp  test_registry.cpp
